testsuite/tests/backpack/should_fail/bkpfail51.bkp
unit p where
    signature H where
        data T = T Int
    module I(module H) where
        import H
unit q where
    dependency p[H=<A>]
    signature A where
        import I
        type T = H.T
-- cyclic import
